# Athena_Stocks

./: .gitignore  LICENSE  README.md  db.sqlite3  pyproject.toml  requirements.txt
django_project/: db.sqlite3  fmcc.csv  tsla.csv
django_project/django_project/: settings.py  urls.py
django_project/stock_analytics/: admin.py  apps.py  lstm.py  models.py  momentum.py  old_lstm.py  sentiment.py  simple_lstm.py  startup.py  stocknews.py  urls.py  views.py
django_project/stock_analytics/data/: StocknewsDatasetAAPL.csv  StocknewsDatasetAMZN.csv  StocknewsDatasetMSFT.csv  StocknewsDatasetTSLA.csv  StocknewsDatasetWMT.csv  nasdaq_screener_ticker_database.csv
django_project/stock_analytics/migrations/: 0001_initial.py  0002_auto_20210730_1814.py  0003_auto_20210730_1818.py  0004_auto_20210730_1935.py  0005_auto_20210730_1939.py  0006_auto_20210730_1941.py  0007_alter_stock_id.py
django_project/stock_analytics/static/: etf.csv  nasdaq.csv  nyse.csv
django_project/stocks/: admin.py  models.py  urls.py  views.py
django_project/stocks/migrations/: 0001_initial.py  0002_auto_20210730_1814.py  0002_remove_fav_stocks_comment.py  0003_alter_fav_stocks_id.py
django_project/users/: Forms.py  views.py
src/: a.py  stocknews.py
src/data/: StocknewsDatasetAAPL.csv  StocknewsDatasetINTC.csv  StocknewsDatasetTSLA.csv
src/models/: lstm.py
stocks/: admin.py  models.py
stocks/migrations/: 0001_initial.py
stocks/templates/stocks/: UserPage.html
users/: views.py
users/templates/registration/: register.html  the_stocks.html
(+14 files in other folders)
